--- a/C206_CaseStudy/.classpath
+++ b/C206_CaseStudy/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/20014152/Desktop/School/YEAR 2 SEMESTER 1/c209 friday/Lesson 7/mysql-connector-java-8.0.20.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Saran/Downloads/C209/L07_DB_Setup/mysql-connector-java-8.0.20.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
